# practice_Zandakov_8B42

./: CMakeLists.txt  README.md  main.cpp  pong.cpp  pong.h
